--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
-
 body{
     background-image: url("./Images/kentenavbar.jpg");
     background-repeat: repeat-y;
 }
+.navbar{
+    width: 78%;
+    margin-left: 11%;
+    
+}
 .navbar img{
-   width: 100%;
+   width: 20%;
    margin-left: 5%;
 }
 .jumbotron p{
