--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,15 @@ h1{
 .offset{
    margin-left: 5%;
 }
-/* .footer{
-    padding-bottom: 30px;
-} */
+.footer{
+    padding-bottom: 5%;
+    padding-top: 5%;
+}
+.footer img{
+    width: 1100px;
+    height: 70px;
+    margin-left: 20%;
+}
 
 @media(min-width: 800px){
     .navbar img{
